--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,15 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/.sfdx": true
-  }
+  },
+  "cSpell.userWords": [
+    "helptext",
+    "picklist",
+    "salesforcecodesnippets",
+    "salesforcedx",
+    "schrab",
+    "sfdc",
+    "slds",
+    "visibilitystate"
+  ],
 }
